# glia

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py  models.py  schemas.py  utilities.py
glia-chart/: Chart.yaml  values.yaml
glia-chart/templates/: deployment.yaml  service.yaml
glia-chart/templates/tests/: test-connection.yaml
helm-chart/: values.yaml
helm-chart/templates/: NOTES.txt  _helpers.tpl  hpa.yaml  ingress.yaml  serviceaccount.yaml
tests/: test_audit.py  test_jumble.py
