[tool.poetry]
name = "ldang-glia"
version = "0.1.0"
description = "Glia Infrastructure Engineer Skill Assessment"
authors = ["Luong Dang <luong.dang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.85.1"}
sqlalchemy = "^1.4.42"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
